update fixing stretching logo on iphone

--- a/Client/mbs_registration.css
+++ b/Client/mbs_registration.css
@@ -188,21 +188,21 @@
 
     .main .logo {
         width: 100%;
-        height: 7% !important;
+        height: 12% !important;
         background-position: center;
         background-attachment: fixed;
     }
 
     .main .logo2 {
         width: 70%;
-        height: 5% !important;
+        height: 7% !important;
         background-position: center;
         background-attachment: fixed;
     }
 
     .registration .logo {
         width: 100%;
-        height: 7% !important;
+        height: 12% !important;
         background-position: center;
         background-attachment: fixed;
     }
@@ -216,7 +216,7 @@
 
     .confirm .logo {
         width: 100%;
-        height: 7% !important;
+        height: 12% !important;
         background-position: center;
         background-attachment: fixed;
     }
